Fix the FAQ section width jumping around on different viewport widths

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -796,7 +796,3 @@ table.sponsor-tiers td:first-child {
 .ac a {
   color: black;
 }
-
-.donate .container {
-  max-width: none;
-}
